[metadata]
name = {{ cookiecutter.repository_name }}
description = {{ cookiecutter.project_description }}
url = {{ cookiecutter.repository_url }}
long_description = file: README.md
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.author_email }}
keywords = python
license = {{ cookiecutter.license }}
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = True
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    # Add project specific dependencies
    # Stuff easy to break with updates

    # Stable stuff usually backward compatible
    click
    coverage
    loguru
    python-dotenv
    pre-commit
    gh

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mike

test =
    pytest
    pytest-cov

dev =
    black
    pylint
    isort
    mypy
    %(test)s
    %(docs)s
